<resources>
    <string name="app_name">Prosecco Pong</string>
    <string name="welcome_title">Welcome to Prosecco Pong!</string>
    <string name="classic_pong">Classic Pong</string>
    <string name="prosecco_pong">Prosecco Pong</string>
    <string name="highscore">Highscore</string>
    <string name="prosecco">Prosecco</string>
    <string name="pong">Pong</string>
    <string name="name">NAME</string>
    <string name="score">SCORE</string>
    <string name="rank">RANK</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="classic_pong_title">CLASSIC PONG</string>
    <string name="your_name">Your name</string>
    <string name="hall_of_fame">HALL OF FAME</string>
    <string name="the_top_10_hall_of_famers">The top 10 Hall Of Famers</string>
    <string name="title_activity_prosecco_game_view">ProseccoGameViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete">Delete all scores</string>
    <string name="classic">Classic</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="main_menu">Main menu</string>
    <string name="info_page">Info Page</string>
    <string name="first_description_info_page">Welcome to Prosecco Pong! In 2023, our dynamic team - comprising Matilda, Katja, Hand, and Christopher - crafted a unique twist on the classic Pong game.</string>
    <string name="second_description_info_page">Explore our two thrilling game modes: unleash your competitive spirit in the classic mode or test your skills in Prosecco Pong. Versatility is the key to pure joy!</string>
    <string name="third_description_info_page">Track your progress with our scoring system and aim for the top of the HighScore list. Showcase your expertise to the world and immerse yourself in a lively competition.</string>
    <string name="fourth_description_info_page">Thank you for choosing Prosecco Pong. Let the game begin, and may your glass always be half full!</string>
    <string name="play">Play</string>


</resources>