<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pexels_kai_pilger_1341279"
    tools:context=".HighscoreActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/highscore"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin_start"
        android:fontFamily="@font/gameplay"
        android:shadowColor="@color/baby_blue"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="20"
        android:text="@string/high_scores"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin_start"
        android:fontFamily="@font/gameplay"
        android:orientation="horizontal"
        android:shadowColor="@color/baby_blue"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="20"
        android:text="@string/classic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin_end"
        android:layout_marginEnd="@dimen/medium_layout_width"
        android:fontFamily="@font/gameplay"
        android:shadowColor="@color/baby_blue"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="20"
        android:text="@string/prosecco"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewClassic" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="@dimen/button_w"
        android:layout_height="@dimen/button_h"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginTop="@dimen/extra_small_margin_bottom"
        android:layout_marginEnd="@dimen/button_margin"
        android:background="@drawable/delete_btn"
        android:shadowColor="@color/baby_blue"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="20"
        android:text="@string/delete"
        android:textColor="@color/baby_blue"
        android:textSize="@dimen/small_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewProcesso" />


    <Button
        android:id="@+id/buttonMainMenu"
        android:layout_width="@dimen/button_w"
        android:layout_height="@dimen/button_h"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginTop="@dimen/medium_margin_start"
        android:layout_marginEnd="@dimen/button_margin"
        android:background="@drawable/main_buttons"
        android:fontFamily="@font/gameplay"
        android:shadowColor="@color/pink"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="20"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textColor="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/large_margin_top"
        android:layout_height="@dimen/extra_medium_margin_top"
        android:backgroundTint="@color/black"
        android:elevation="@dimen/small_elevation"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewClassic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewClassic"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewClassic">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/large_margin_top"
        android:layout_height="@dimen/extra_medium_margin_top"
        android:backgroundTint="@color/black"
        android:elevation="@dimen/small_elevation"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewProcesso"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewProcesso"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewProcesso"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewProcesso">


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewClassic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_layout_width"
        android:layout_marginTop="@dimen/small_margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProcesso"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_layout_width"
        android:layout_marginTop="@dimen/small_margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>